# study-nlp-suicidality-surveillance

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  set_environment.py
bash/: generate_annotation_data_validation_level.sh  inference_ml_model.sh  run_analysis.sh  train_ml_model.sh
conf/: conf_article.json
data/export/ehr_deployement/: ratio_doc_hospit_092022.pickle
notebooks/: Preprocess data.md  ehr_deployement.md  flowchart inclusion.md
notebooks/annotation_validation/benjamin/: benjamin_RF.md  benjamin_SA-ML.md  benjamin_SA-RB.md
notebooks/annotation_validation/vincent/: vincent_RF.md  vincent_SA-ML.md  vincent_SA-RB.md
suicide_attempt/functions/: __init__.py  annotation_utils.py  constants.py  data_wrangling.py  ehr_deployement.py  plot_utils.py  retrieve_data.py  stats_utils.py  text_utils.py  utils.py
suicide_attempt/functions/nlp_ml/: bert_models.py  metrics.py  ml_utils.py
suicide_attempt/pipelines/: ent_classification_ml.py  ent_classification_rule_based.py  generate_annotation_data_validation.py  make_plots.py  rf_document_selection.py  stay_classification_claim_data.py  stay_classification_text_data.py  stay_document_selection.py  train_ml_model.py  validation_and_age_description.py
